Updating Swagger documentation and responses
