# src/main/java/com/banco/transactions/api/HelloController.java
@@ -1,0 +1,14 @@
+package com.banco.transactions.api;
+
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class HelloController {
+
+    @RequestMapping(value = "/hello", method = RequestMethod.GET)
+    public String sayHello() {
+        return "Hello Restful";
+    }
+}
