# src/main/java/com/banco/transactions/model/TransactionFilterResponse.java
@@ -1,4 +1,19 @@
 package com.banco.transactions.model;
 
+import io.swagger.annotations.ApiModelProperty;
+
+import java.util.List;
+
 public class TransactionFilterResponse {
+
+    List<TransactionGD> transactions;
+
+    @ApiModelProperty(required = true, value = "List of filter transactions.")
+    public List<TransactionGD> getTransactions() {
+        return transactions;
+    }
+
+    public void setTransactions(List<TransactionGD> transactions) {
+        this.transactions = transactions;
+    }
 }
