# src/main/java/com/banco/transactions/model/TransactionListResponse.java
@@ -1,4 +1,19 @@
 package com.banco.transactions.model;
 
+import io.swagger.annotations.ApiModelProperty;
+
+import java.util.List;
+
 public class TransactionListResponse {
+
+    List<TransactionGD> transactions;
+
+    @ApiModelProperty(required = true, value = "List of mapped transactions.")
+    public List<TransactionGD> getTransactions() {
+        return transactions;
+    }
+
+    public void setTransactions(List<TransactionGD> transactions) {
+        this.transactions = transactions;
+    }
 }
