# src/main/swagger/swagger.json
@@ -10,12 +10,17 @@
       "email":"afjimene@gmail.com"
     },
     "license":{
+      "name": "license",
       "url":"http://unlicense.org"
     }
   },
   "host":"localhost:8080",
   "basePath":"/",
   "tags":[
+    {
+      "name":"hello-controller",
+      "description":"Hello Controller"
+    },
     {
       "name":"transactions-api-controller",
       "description":"Transactions Api Controller"
@@ -201,6 +206,36 @@
         },
         "deprecated":false
       }
+    },
+    "/hello":{
+      "get":{
+        "tags":[
+          "hello-controller"
+        ],
+        "summary":"sayHello",
+        "operationId":"sayHelloUsingGET",
+        "produces":[
+          "*/*"
+        ],
+        "responses":{
+          "200":{
+            "description":"OK",
+            "schema":{
+              "type":"string"
+            }
+          },
+          "401":{
+            "description":"Unauthorized"
+          },
+          "403":{
+            "description":"Forbidden"
+          },
+          "404":{
+            "description":"Not Found"
+          }
+        },
+        "deprecated":false
+      }
     }
   },
   "definitions":{
@@ -269,7 +304,60 @@
     },
     "TransactionFilterResponse":{
       "type":"object",
+      "required":[
+        "transactions"
+      ],
+      "properties":{
+        "transactions":{
+          "type":"array",
+          "description":"List of filter transactions.",
+          "items":{
+            "$ref":"#/definitions/TransactionGD"
+          }
+        }
+      },
       "title":"TransactionFilterResponse"
+    },
+    "TransactionGD":{
+      "type":"object",
+      "properties":{
+        "accountId":{
+          "type":"string"
+        },
+        "counterPartyLogoPath":{
+          "type":"string"
+        },
+        "counterpartyAccount":{
+          "type":"string"
+        },
+        "counterpartyName":{
+          "type":"string"
+        },
+        "description":{
+          "type":"string"
+        },
+        "id":{
+          "type":"string"
+        },
+        "instructedAmount":{
+          "type":"number",
+          "format":"double"
+        },
+        "instructedCurrency":{
+          "type":"string"
+        },
+        "transactionAmount":{
+          "type":"number",
+          "format":"double"
+        },
+        "transactionCurrency":{
+          "type":"string"
+        },
+        "transactionType":{
+          "type":"string"
+        }
+      },
+      "title":"TransactionGD"
     },
     "TransactionGroupRequest":{
       "type":"object",
@@ -277,6 +365,18 @@
     },
     "TransactionGroupResponse":{
       "type":"object",
+      "required":[
+        "transactions"
+      ],
+      "properties":{
+        "transactions":{
+          "type":"array",
+          "description":"List of grouped transactions.",
+          "items":{
+            "$ref":"#/definitions/TransactionGD"
+          }
+        }
+      },
       "title":"TransactionGroupResponse"
     },
     "TransactionListRequest":{
@@ -285,6 +385,18 @@
     },
     "TransactionListResponse":{
       "type":"object",
+      "required":[
+        "transactions"
+      ],
+      "properties":{
+        "transactions":{
+          "type":"array",
+          "description":"List of mapped transactions.",
+          "items":{
+            "$ref":"#/definitions/TransactionGD"
+          }
+        }
+      },
       "title":"TransactionListResponse"
     }
   }
